--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
