--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-icons/all-files": "^4.1.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "lottie-react": "^2.4.0",
     "mysql2": "^3.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
