--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.6.7",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
@@ -26,7 +27,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
+    "stripe": "^14.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
