--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lottie-react": "^2.4.0",
     "mysql2": "^3.9.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.11.2",
     "react-icons": "^5.0.1",
